--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-redux": "^7.1.24",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
-    "next": "13.0.5",
+    "next": "^13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
-    "swr": "^1.3.0",
-    "typescript": "4.9.3"
+    "react-redux": "^8.0.5",
+    "typescript": "4.9.3",
+    "windicss": "^3.5.6"
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "devDependencies": {
+    "sass": "^1.56.1",
+    "windicss-webpack-plugin": "^1.7.7"
   }
 }
