--- a/package.json
+++ b/package.json
@@ -9,26 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.0.6",
+    "@next/font": "^13.1.1",
+    "@react-spring/core": "^9.6.1",
+    "@react-spring/three": "^9.6.1",
+    "@react-spring/web": "^9.6.1",
+    "@react-three/a11y": "^3.0.0",
+    "@react-three/drei": "^9.51.9",
+    "@react-three/fiber": "^8.10.0",
+    "@react-three/postprocessing": "^2.7.0",
     "@reduxjs/toolkit": "^1.9.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@types/react-redux": "^7.1.24",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "next": "^13.0.6",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@types/three": "^0.148.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "next": "^13.1.1",
+    "next-themes": "^0.2.1",
+    "r3f-perf": "^6.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "typescript": "4.9.3",
+    "react-type-animation": "^2.1.2",
+    "three": "^0.148.0",
+    "typescript": "4.9.4",
+    "usehooks-ts": "^2.9.1",
     "windicss": "^3.5.6"
   },
   "resolutions": {
     "styled-components": "^5"
   },
   "devDependencies": {
-    "sass": "^1.56.1",
+    "sass": "^1.57.1",
     "windicss-webpack-plugin": "^1.7.7"
   }
 }
