--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/three": "^0.148.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^8.4.2",
     "next": "^13.1.1",
     "next-themes": "^0.2.1",
     "r3f-perf": "^6.6.3",
