--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "18.0.10",
     "@types/react-redux": "^7.1.25",
     "@types/three": "^0.148.0",
+    "@windicss/plugin-heropatterns": "^0.0.8",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^8.4.2",
