--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "r3f-perf": "^6.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hover-video-player": "^9.7.1",
     "react-redux": "^8.0.5",
     "react-type-animation": "^2.1.2",
     "three": "^0.148.0",
