--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "framer-motion": "^8.5.4",
+    "hamburger-react": "^2.5.0",
     "next": "^13.1.5",
     "next-themes": "^0.2.1",
     "r3f-perf": "^6.6.3",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-hover-video-player": "^9.7.1",
     "react-redux": "^8.0.5",
