--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "react-hover-video-player": "^9.7.1",
     "react-redux": "^8.0.5",
     "react-type-animation": "^2.1.2",
+    "sharp": "^0.31.3",
     "three": "^0.148.0",
     "typescript": "4.9.4",
     "usehooks-ts": "^2.9.1",
